# rfetch

./: Cargo.toml  LICENSE  README.md  config.example.toml
examples/: simple_download.rs
src/: args.rs  daemon.rs  downloader.rs  ipc.rs  lib.rs  main.rs  state.rs  utils.rs  worker.rs
tests/: integration_test.rs
