[package]
name = "quick-pull"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.53", features = ["derive"] }
reqwest = { version = "0.12.24", features = ["json", "stream"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
futures-util = "0.3.31"
indicatif = "0.18.3"
serde_json = "1.0"
anyhow = "1.0.100"
sha2 = "0.10.9"
hex = "0.4.3"
